fix(header space): fix header space on narrow displays

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -721,9 +721,15 @@ hr.post-end {
 
 // Media Queries
 //
+@media (min-width: 200px) {
+  .site-main {
+    margin-top: 4em;
+  }
+}
+
 @media (min-width: 800px) {
   .site-main {
-    margin-top: 3em;
+    margin-top: 6em;
   }
 
   hr.post-end {
